--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://none159.github.io/MyPortfolio/",
+  "homepage": "https://none159.github.io/myportfolio/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
